Fix: nav bar and header overlap when sticky/popping
For now, I've resolved this by stopping the popping.

--- a/FirstUI/wwwroot/css/default.css
+++ b/FirstUI/wwwroot/css/default.css
@@ -10,13 +10,8 @@
     top: 0%;
 }
 
-.header:hover {
-    border: solid;
-}
-
 .header:active {
     background-color: black;
-    border: solid;
     color: cyan;
 }
 
